updated vscode gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -293,10 +293,7 @@ __pycache__/
 *.xsd.cs
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
+**/.vscode/*
 !.vscode/extensions.json
 .history
 
