--- a/src/Inquirer/Inquirer.csproj
+++ b/src/Inquirer/Inquirer.csproj
@@ -1,8 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>InquirerCore</RootNamespace>
+    <Version>0.0.2</Version>
+    <Authors>Arthur Fücher</Authors>
+    <Company />
+    <Product />
+    <Description>A collection of common interactive command line user interfaces.</Description>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/afucher/Inquirer/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/afucher/Inquirer</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/afucher/Inquirer/</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
