--- a/src/Inquirer/Inquirer.csproj
+++ b/src/Inquirer/Inquirer.csproj
@@ -14,4 +14,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
