--- a/test/InquirerUnitTest/InquirerUnitTest.csproj
+++ b/test/InquirerUnitTest/InquirerUnitTest.csproj
@@ -8,7 +8,9 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="Microsoft.Reactive.Testing" Version="3.1.1" />
     <PackageReference Include="NSubstitute" Version="2.0.3" />
+    <PackageReference Include="System.Reactive" Version="3.1.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
