set C# version to 8. minor code fixes.

--- a/src/Inquirer/Inquirer.csproj
+++ b/src/Inquirer/Inquirer.csproj
@@ -12,6 +12,7 @@
     <PackageProjectUrl>https://github.com/afucher/Inquirer</PackageProjectUrl>
     <RepositoryUrl>https://github.com/afucher/Inquirer/</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
